--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -1,4 +1,5 @@
 .modal {
+  min-width: 100vh;
   position: fixed;
   top: "50%";
   left: "50%";
@@ -11,6 +12,7 @@
 .content {
   padding: 16px;
   background-color: #1d303e;
+  color: aqua;
 }
 
 .btn {
@@ -20,6 +22,7 @@
   width: 32px;
   display: block;
   cursor: pointer;
+  color: rgb(230, 51, 10);
 }
 
 .img {
@@ -29,7 +32,7 @@
   margin-bottom: 10px;
 }
 
-.infoListAndLink {
+/* .infoListAndLink {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -59,13 +62,16 @@
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
-}
+} */
 
 .description {
+  display: flex;
+  justify-content: center;
   font-weight: 400;
+  margin: 0 auto;
 }
 
-.userInfo {
+/* .userInfo {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -73,5 +79,6 @@
 
 .name {
   font-weight: 700;
-  /* margin-bottom: 5px; */
+  margin-bottom: 5px;
 }
+ */
